--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,12 +3,13 @@ include ./Argonaut.conf
 
 allow_remote_control yes
 
+#font_family			Source Code Pro
 font_family			Roboto Mono Regular
-bold_font			auto
-italic_font			Consolas
-bold_italic_font	Consolas
+bold_font			Consolas
+italic_font			Source Code Pro Italic
+bold_italic_font	Source Code Pro Bold Italic
 
-font_size			12.0
+font_size			14.0
 
 force_ltr	no
 
@@ -50,3 +51,5 @@ window_padding_width		0
 placement_strategy			left
 
 hide_window_decorations		no
+
+map kitty_mod+f1 discard_event
