--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -12,16 +12,20 @@
 	"editor.autoClosingQuotes":		"never",
 	"problems.showCurrentInStatus":	true,
 	
-	"vim.statusBarColorControl":	true,
-	"vim.statusBarColors.normal":	"#36296b",
-	"vim.statusBarColors.insert":	"#731bb3",
-	"vim.statusBarColors.visual":	"#857a00",
-	"vim.statusBarColors.visualblock":	"#00b2c9",
-	"vim.statusBarColors.visualline":	"#9c001d",
+	"vim.statusBarColorControl":		true,
+	"vim.statusBarColors.normal":		"#0C0E14",
+	"vim.statusBarColors.insert":		"#731bb360",
+	"vim.statusBarColors.visual":		"#857a0030",
+	"vim.statusBarColors.visualblock":	"#00b2c930",
+	"vim.statusBarColors.visualline":	"#9c001d30",
 
 	"workbench.colorCustomizations": {
 		"editor.background": "#0D1117",
-		"statusBar.background": "#36296b",
+		"activityBar.background": "#07090c",
+		"sideBar.background": "#0C0E14",
+		"editorGroupHeader.tabsBackground": "#0C0E14",
+		"tab.inactiveBackground": "#1d1f23",
+		"statusBar.background": "#0C0E14",
 		"statusBar.foreground": "#ffffff",
 		"editorLineNumber.activeForeground": "#DDDDDD",
 		"editorCursor.background": "#0D1117",
@@ -31,8 +35,8 @@
 		"editor.findMatchHighlightBackground": "#ff0000",
 		"editorBracketMatch.background": "#ffe3e94d",
 		"editorBracketMatch.border": "#ffffff00",
-		"statusBar.noFolderBackground": "#36296b",
-		"statusBar.debuggingBackground": "#36296b",
+		"statusBar.noFolderBackground": "#0C0E14",
+		"statusBar.debuggingBackground": "#0C0E14",
 		"editorBracketHighlight.foreground1": "#f0f6fcc1",
 		"editorBracketHighlight.foreground2": "#ffff2690",
 		"editorBracketHighlight.foreground3": "#26ff9690",
@@ -84,8 +88,22 @@
 					"settings": {"fontStyle": "italic", "foreground": "#ebfcfc"}
 			},
 			{
+                "scope": ["entity.name.type"],
+					//"settings": {"fontStyle": "italic", "foreground": "#F0F6FC"}
+					"settings": {"fontStyle": "", "foreground": ""}
+			},
+			{
+                "scope": ["storage.type.string"],
+					//"settings": {"fontStyle": "italic", "foreground": "#F0F6FC"}
+					"settings": {"fontStyle": "", "foreground": "#ebfcfc"}
+			},
+			{
+                "scope": ["punctuation.definition.comment"],
+					"settings": {"fontStyle": "italic", "foreground": "#f0f6fc2d"}
+			},
+			{
                 "scope": ["comment"],
-					"settings": {"fontStyle": "italic", "foreground": "#79C0FF"}
+					"settings": {"fontStyle": "italic", "foreground": "#d6e7f9b4"}
 			},
 			{
                 "scope": ["constant.language.NULL"],
