--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -25,7 +25,7 @@
 		"sideBar.background": "#0C0E14",
 		"editorGroupHeader.tabsBackground": "#0C0E14",
 		"tab.inactiveBackground": "#1d1f23",
-		"statusBar.background": "#0C0E14",
+		"statusBar.background": "#731bb360",
 		"statusBar.foreground": "#ffffff",
 		"editorLineNumber.activeForeground": "#DDDDDD",
 		"editorCursor.background": "#0D1117",
@@ -35,8 +35,8 @@
 		"editor.findMatchHighlightBackground": "#ff0000",
 		"editorBracketMatch.background": "#ffe3e94d",
 		"editorBracketMatch.border": "#ffffff00",
-		"statusBar.noFolderBackground": "#0C0E14",
-		"statusBar.debuggingBackground": "#0C0E14",
+		"statusBar.noFolderBackground": "#731bb360",
+		"statusBar.debuggingBackground": "#731bb360",
 		"editorBracketHighlight.foreground1": "#f0f6fcc1",
 		"editorBracketHighlight.foreground2": "#ffff2690",
 		"editorBracketHighlight.foreground3": "#26ff9690",
@@ -56,6 +56,10 @@
 				"scope": ["constant.character.escape"],
 					"settings": {"foreground": "#FFD7D7"}
             },
+            {
+				"scope": ["constant.numeric"],
+					"settings": {"foreground": "#78f6ff"}
+            },
 			{
                 "scope": ["keyword.control", "keyword.operator.functionlike", "keyword.operator.sizeof"],
 					//"settings": {"foreground": "#EC8E2C"}
@@ -69,7 +73,7 @@
 			},
 			{
                 "scope": ["entity.name.function"],
-					"settings": {"fontStyle": "bold", "foreground": "#79C0FF"}
+					"settings": {"fontStyle": "bold", "foreground": "#e34a87"}
 			},
 			{
                 "scope": ["entity.name.function.operator",
@@ -77,6 +81,11 @@
 						"keyword.operator.assignment",
 						"punctuation.separator.pointer-access", "punctuation.separator.dot-access"],
 					"settings": {"fontStyle": "", "foreground": "#ff9999"}
+			},
+			{
+                "scope": ["entity.name.function.preprocessor"],
+					//"settings": {"fontStyle": "", "foreground": "#c7a5cc"}
+					"settings": {"fontStyle": "", "foreground": "#3c5ee6"}
 			},
 			{
                 "scope": ["keyword.operator.bitwise"],
@@ -88,13 +97,23 @@
 					"settings": {"fontStyle": "italic", "foreground": "#ebfcfc"}
 			},
 			{
+                "scope": ["variable.language.this"],
+					"settings": {"fontStyle": "", "foreground": "#624e208a"}
+			},
+			{
+                "scope": ["storage.type"],
+					"settings": {"fontStyle": "", "foreground": "#4bb3e3"}
+			},
+			{
                 "scope": ["entity.name.type"],
-					//"settings": {"fontStyle": "italic", "foreground": "#F0F6FC"}
-					"settings": {"fontStyle": "", "foreground": ""}
+					"settings": {"fontStyle": "", "foreground": "#4be37e"}
+			},
+			{
+                "scope": ["entity.name.namespace"],
+					"settings": {"fontStyle": "", "foreground": "#c9c94eaa"}
 			},
 			{
                 "scope": ["storage.type.string"],
-					//"settings": {"fontStyle": "italic", "foreground": "#F0F6FC"}
 					"settings": {"fontStyle": "", "foreground": "#ebfcfc"}
 			},
 			{
@@ -108,11 +127,6 @@
 			{
                 "scope": ["constant.language.NULL"],
 					"settings": {"fontStyle": "", "foreground": "#cc27e3"}
-			},
-			{
-                "scope": ["entity.name.function.preprocessor"],
-					//"settings": {"fontStyle": "", "foreground": "#c7a5cc"}
-					"settings": {"fontStyle": "", "foreground": "#3c5ee6"}
 			},
         ]
 	},
