--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -25,7 +25,7 @@
 		"sideBar.background": "#0C0E14",
 		"editorGroupHeader.tabsBackground": "#0C0E14",
 		"tab.inactiveBackground": "#1d1f23",
-		"statusBar.background": "#731bb360",
+		"statusBar.background": "#0C0E14",
 		"statusBar.foreground": "#ffffff",
 		"editorLineNumber.activeForeground": "#DDDDDD",
 		"editorCursor.background": "#0D1117",
@@ -35,8 +35,8 @@
 		"editor.findMatchHighlightBackground": "#ff0000",
 		"editorBracketMatch.background": "#ffe3e94d",
 		"editorBracketMatch.border": "#ffffff00",
-		"statusBar.noFolderBackground": "#731bb360",
-		"statusBar.debuggingBackground": "#731bb360",
+		"statusBar.noFolderBackground": "#0C0E14",
+		"statusBar.debuggingBackground": "#0C0E14",
 		"editorBracketHighlight.foreground1": "#f0f6fcc1",
 		"editorBracketHighlight.foreground2": "#ffff2690",
 		"editorBracketHighlight.foreground3": "#26ff9690",
@@ -67,6 +67,14 @@
 					"settings": {"foreground": "#d9b036"}
 			},
 			{
+                "scope": ["keyword.control.directive.include"],
+					"settings": {"foreground": "#9A5FEB"}
+			},
+			{
+                "scope": ["keyword.operator.logical"],
+					"settings": {"foreground": "#e9bb32"}
+			},
+			{
                 "scope": ["keyword.control.while", "keyword.control.for"],
 					//"settings": {"foreground": "#B986C0"}
 					"settings": {"foreground": "#cb62d9"}
@@ -76,11 +84,40 @@
 					"settings": {"fontStyle": "bold", "foreground": "#e34a87"}
 			},
 			{
-                "scope": ["entity.name.function.operator",
-						"keyword.operator.arithmetic", "keyword.operator.comparison",
-						"keyword.operator.assignment",
-						"punctuation.separator.pointer-access", "punctuation.separator.dot-access"],
+                "scope": ["entity.name.function.operator"],
+					"settings": {"fontStyle": "", "foreground": "#e9257d"}
+			},
+			{
+                "scope": ["storage.modifier.specifier.const"],
+					"settings": {"fontStyle": "italic", "foreground": "#e4ff92cd"}
+			},
+			{
+                "scope": ["storage.modifier.specifier.static"],
+					"settings": {"fontStyle": "italic", "foreground": "#ffff0086"}
+			},
+			{
+                "scope": ["keyword.operator.arithmetic"],
+					"settings": {"fontStyle": "", "foreground": "#ffb6d7"}
+			},
+			{
+                "scope": ["keyword.operator.comparison"],
+					"settings": {"fontStyle": "", "foreground": "#ff9e37"}
+			},
+			{
+                "scope": ["keyword.operator.assignment"],
+					"settings": {"fontStyle": "", "foreground": "#4ade00"}
+			},
+			{
+                "scope": ["keyword.operator.assignment.compound"],
+					"settings": {"fontStyle": "", "foreground": "#8dde00"}
+			},
+			{
+                "scope": ["keyword.operator.increment"],
 					"settings": {"fontStyle": "", "foreground": "#ff9999"}
+			},
+			{
+                "scope": ["keyword.operator.decrement"],
+					"settings": {"fontStyle": "", "foreground": "#99ffec"}
 			},
 			{
                 "scope": ["entity.name.function.preprocessor"],
@@ -89,7 +126,19 @@
 			},
 			{
                 "scope": ["keyword.operator.bitwise"],
-					"settings": {"fontStyle": "italic", "foreground": "#ff9999"}
+					"settings": {"fontStyle": "italic", "foreground": "#cdf4ff"}
+			},
+			{
+                "scope": ["storage.modifier.pointer"],
+					"settings": {"fontStyle": "", "foreground": "#00b5bf"}
+			},
+			{
+                "scope": ["storage.modifier.reference"],
+					"settings": {"fontStyle": "", "foreground": "#00bf23"}
+			},
+			{
+                "scope": ["punctuation.separator.pointer-access", "punctuation.separator.dot-access"],
+					"settings": {"fontStyle": "", "foreground": "#d9c2fe"}
 			},
 			{
                 "scope": ["variable"],
