--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,6 +1,7 @@
 {
     "42header.email":		"adelille@student.42.fr",
     "42header.username":	"adelille",
+	"codam-norminette-3.ignoreErrors": ["WRONG_SCOPE_COMMENT", "EMPTY_LINE_FUNCTION"],
 
     "files.autoSave":	"onWindowChange",
     "editor.insertSpaces":			false,
@@ -25,7 +26,7 @@
 		"sideBar.background": "#0C0E14",
 		"editorGroupHeader.tabsBackground": "#0C0E14",
 		"tab.inactiveBackground": "#1d1f23",
-		"statusBar.background": "#0C0E14",
+		"statusBar.background": "#00b2c930",
 		"statusBar.foreground": "#ffffff",
 		"editorLineNumber.activeForeground": "#DDDDDD",
 		"editorCursor.background": "#0D1117",
@@ -35,8 +36,8 @@
 		"editor.findMatchHighlightBackground": "#ff0000",
 		"editorBracketMatch.background": "#ffe3e94d",
 		"editorBracketMatch.border": "#ffffff00",
-		"statusBar.noFolderBackground": "#0C0E14",
-		"statusBar.debuggingBackground": "#0C0E14",
+		"statusBar.noFolderBackground": "#00b2c930",
+		"statusBar.debuggingBackground": "#00b2c930",
 		"editorBracketHighlight.foreground1": "#f0f6fcc1",
 		"editorBracketHighlight.foreground2": "#ffff2690",
 		"editorBracketHighlight.foreground3": "#26ff9690",
