--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -8,7 +8,7 @@
 	"editor.detectIndentation":		false,
 	"editor.renderFinalNewline":	false,
 	"explorer.confirmDragAndDrop":	false,
-	"editor.fontFamily":	"'Roboto Mono', Consolas",
+	"editor.fontFamily":	"'Roboto Mono', 'Droid Sans Mono', Consolas",
 	"editor.autoClosingBrackets":	"never",
 	"editor.autoClosingQuotes":		"never",
 	"problems.showCurrentInStatus":	true,
@@ -26,25 +26,22 @@
 		"sideBar.background": "#0C0E14",
 		"editorGroupHeader.tabsBackground": "#0C0E14",
 		"tab.inactiveBackground": "#1d1f23",
-		"statusBar.background": "#00b2c930",
+		"statusBar.background": "#0C0E14",
 		"statusBar.foreground": "#ffffff",
 		"editorLineNumber.activeForeground": "#DDDDDD",
 		"editorCursor.background": "#0D1117",
 		"editorCursor.foreground": "#D4B6CA",
 		"editor.selectionBackground": "#ffe3e94d",
-		"editor.inactiveSelectionBackground": "#ff0000",
-		"editor.findMatchHighlightBackground": "#ff0000",
 		"editorBracketMatch.background": "#ffe3e94d",
 		"editorBracketMatch.border": "#ffffff00",
-		"statusBar.noFolderBackground": "#00b2c930",
-		"statusBar.debuggingBackground": "#00b2c930",
+		"statusBar.noFolderBackground": "#0C0E14",
+		"statusBar.debuggingBackground": "#0C0E14",
 		"editorBracketHighlight.foreground1": "#f0f6fcc1",
 		"editorBracketHighlight.foreground2": "#ffff2690",
 		"editorBracketHighlight.foreground3": "#26ff9690",
 		"editorBracketHighlight.foreground4": "#b43bff90",
 		"editorBracketHighlight.foreground5": "#ff00f790",
 		"editorBracketHighlight.foreground6": "#ff009d90",
-		"editorBracketHighlight.unexpectedBracket.foreground": "#ff0000"
 	},
 
 	"editor.tokenColorCustomizations": {
