--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -27,15 +27,15 @@
 		"editor.selectionBackground": "#ffe3e94d",
 		"editorBracketMatch.background": "#ffe3e94d",
 		"editorBracketMatch.border": "#ffffff00",
-		"statusBar.noFolderBackground": "#0C0E14",
-		"statusBar.debuggingBackground": "#0C0E14",
+		"statusBar.noFolderBackground": "#731bb360",
+		"statusBar.debuggingBackground": "#731bb360",
 		"editorBracketHighlight.foreground1": "#f0f6fcc1",
 		"editorBracketHighlight.foreground2": "#ffff2690",
 		"editorBracketHighlight.foreground3": "#26ff9690",
 		"editorBracketHighlight.foreground4": "#b43bff90",
 		"editorBracketHighlight.foreground5": "#ff00f790",
 		"editorBracketHighlight.foreground6": "#ff009d90",
-		"statusBar.background": "#0C0E14",
+		"statusBar.background": "#731bb360",
 		"editor.background": "#0D1117",
 		"activityBar.background": "#07090c",
 		"sideBar.background": "#0C0E14",
@@ -344,7 +344,60 @@
 					"foreground": "#cc27e3"
 				}
 			},
-		]
+			{
+				"scope": [
+					"storage.modifier.mut.rust"
+				],
+				"settings": {
+					"fontStyle": "",
+					"foreground": "#c862e4"
+				}
+			},
+			{
+				"scope": [
+					"keyword.operator.borrow.and.rust"
+				],
+				"settings": {
+					"fontStyle": "",
+					"foreground": "#c1ecad"
+				}
+			},
+			{
+				"scope": [
+					"entity.name.function.macro.rules.rust"
+				],
+				"settings": {
+					"fontStyle": "",
+					"foreground": "#5d85f6"
+				}
+			},
+			{
+				"scope": [
+					"entity.name.function.macro.rust"
+				],
+				"settings": {
+					"fontStyle": "bold",
+					"foreground": "#e34aa8"
+				}
+			},
+			{
+				"scope": [
+					"keyword.other.rust"
+				],
+				"settings": {
+					"fontStyle": "",
+					"foreground": "#dac829de"
+				}
+			},
+		],
+	},
+	"editor.semanticTokenColorCustomizations": {
+		"rules": {
+			"*.mutable": {
+				"fontStyle": "italic",
+				"foreground": "#c24be3"
+			},
+		}
 	},
 	"security.workspace.trust.untrustedFiles": "open",
 	"workbench.iconTheme": "material-icon-theme",
@@ -399,6 +452,7 @@
 		"**/.trunk/*out": true
 	},
 	"[rust]": {
-		"editor.defaultFormatter": "rust-lang.rust-analyzer"
+		"editor.defaultFormatter": "rust-lang.rust-analyzer",
+		"editor.semanticHighlighting.enabled": false
 	},
 }
