--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+const_format = "0.2.30"
 miette = { version = "5.5.0", features = ["fancy"] }
 thiserror = "1.0.38"
 toml = "0.7.2"
