--- a/symlink.toml
+++ b/symlink.toml
@@ -1,5 +1,3 @@
-"some stuff" = 'some stuff'
-
 [zsh]
 update = [ 'Decim' ]
 "~/.zshrc" = 'zsh/zshrc'
@@ -31,13 +29,13 @@ update = 'optional'
 update = 'always'
 "~/.config/yapf/style" = 'yapf'
 
-[font]
-update = 'never'
-"~/.local/share/fonts/*" = 'font/*'
+# [font]
+# update = 'never'
+# "~/.local/share/fonts/*" = 'font/*'
 
-[DE]
-update = 'never'
-"~/.icons/*" = 'DE/cursor/*'
-"~/.themes/*" = 'DE/theme/*'
-"/usr/share/icons/*" = 'DE/icon/*'
-"/usr/share/mint-artwork/sounds/*" = 'DE/sound/*'
+# [DE]
+# update = 'never'
+# "~/.icons/*" = 'DE/cursor/*'
+# "~/.themes/*" = 'DE/theme/*'
+# "/usr/share/icons/*" = 'DE/icon/*'
+# "/usr/share/mint-artwork/sounds/*" = 'DE/sound/*'
