--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ miette = { version = "5.5.0", features = ["fancy"] }
 thiserror = "1.0.38"
 toml = "0.7.2"
 clap = { version = "4.1.8", features = ["derive"] }
+termsize = "0.1.6"
