--- a/data/kitty/kitty.conf
+++ b/data/kitty/kitty.conf
@@ -47,7 +47,7 @@ window_margin_width			0
 single_window_margin_width	-1
 window_padding_width		0
 
-placement_strategy			left
+placement_strategy			center
 
 hide_window_decorations		no
 
