--- a/data/kitty/kitty.conf
+++ b/data/kitty/kitty.conf
@@ -49,6 +49,8 @@ window_padding_width		0
 
 placement_strategy			center
 
+enable_audio_bell			no
+
 hide_window_decorations		no
 
 map kitty_mod+f1 discard_event
