--- a/data/neofetch/config.conf
+++ b/data/neofetch/config.conf
@@ -19,10 +19,10 @@ print_info() {
     info "Theme\t" theme
     info "Icons\t" icons
     info "Term Font\t" term_font
-    info "Font\t" font
+    info "Font\t\t" font
     info "Uptime\t" uptime
     info "Memory\t" memory
-    info "Disk\t" disk
+    info "Disk\t\t" disk
 
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
