--- a/symlink.toml
+++ b/symlink.toml
@@ -9,10 +9,12 @@ update = 'always'
 [zsh-Decim]
 update = [ 'Decim' ]
 "~/.config/zsh/config.d/conda.zsh" = 'zsh/Decim/conda.zsh'
+"~/.config/zsh/config.d/path.zsh" = 'zsh/Decim/path.zsh'
 
 [zsh-Nona]
 update = [ 'Nona' ]
 "~/.config/zsh/config.d/conda.zsh" = 'zsh/Nona/conda.zsh'
+"~/.config/zsh/config.d/path.zsh" = 'zsh/Nona/path.zsh'
 
 [vscode]
 update = [ 'Decim' ]
