--- a/data/vscode/settings.json
+++ b/data/vscode/settings.json
@@ -8,7 +8,7 @@
 	"files.autoSave": "onWindowChange",
 	"editor.insertSpaces": false,
 	"editor.detectIndentation": false,
-	"editor.renderFinalNewline": false,
+	"editor.renderFinalNewline": "off",
 	"explorer.confirmDragAndDrop": false,
 	"editor.fontFamily": "'Roboto Mono', 'Droid Sans Mono', Consolas",
 	"editor.autoClosingBrackets": "never",
@@ -27,15 +27,15 @@
 		"editor.selectionBackground": "#ffe3e94d",
 		"editorBracketMatch.background": "#ffe3e94d",
 		"editorBracketMatch.border": "#ffffff00",
-		"statusBar.noFolderBackground": "#0C0E14",
-		"statusBar.debuggingBackground": "#0C0E14",
+		"statusBar.noFolderBackground": "#007acc",
+		"statusBar.debuggingBackground": "#007acc",
 		"editorBracketHighlight.foreground1": "#f0f6fcc1",
 		"editorBracketHighlight.foreground2": "#ffff2690",
 		"editorBracketHighlight.foreground3": "#26ff9690",
 		"editorBracketHighlight.foreground4": "#b43bff90",
 		"editorBracketHighlight.foreground5": "#ff00f790",
 		"editorBracketHighlight.foreground6": "#ff009d90",
-		"statusBar.background": "#0C0E14",
+		"statusBar.background": "#007acc",
 		"editorInlayHint.background": "#0000",
 		"editorInlayHint.foreground": "#ffffff64"
 	},
@@ -108,5 +108,6 @@
 		"editor.defaultFormatter": "rust-lang.rust-analyzer",
 		"editor.semanticHighlighting.enabled": false
 	},
-	"window.zoomLevel": 2
+	"window.zoomLevel": 2,
+	"git.openRepositoryInParentFolders": "never"
 }
