--- a/data/vscode/settings.json
+++ b/data/vscode/settings.json
@@ -27,15 +27,15 @@
 		"editor.selectionBackground": "#ffe3e94d",
 		"editorBracketMatch.background": "#ffe3e94d",
 		"editorBracketMatch.border": "#ffffff00",
-		"statusBar.noFolderBackground": "#0C0E14",
-		"statusBar.debuggingBackground": "#0C0E14",
+		"statusBar.noFolderBackground": "#007acc",
+		"statusBar.debuggingBackground": "#007acc",
 		"editorBracketHighlight.foreground1": "#f0f6fcc1",
 		"editorBracketHighlight.foreground2": "#ffff2690",
 		"editorBracketHighlight.foreground3": "#26ff9690",
 		"editorBracketHighlight.foreground4": "#b43bff90",
 		"editorBracketHighlight.foreground5": "#ff00f790",
 		"editorBracketHighlight.foreground6": "#ff009d90",
-		"statusBar.background": "#0C0E14",
+		"statusBar.background": "#007acc",
 		"editorInlayHint.background": "#0000",
 		"editorInlayHint.foreground": "#ffffff64"
 	},
@@ -109,6 +109,5 @@
 		"editor.semanticHighlighting.enabled": false
 	},
 	"git.openRepositoryInParentFolders": "never",
-	"workbench.colorTheme": "vity",
-	"window.zoomLevel": 2
+	"workbench.colorTheme": "vity"
 }
