--- a/data/vscode/settings.json
+++ b/data/vscode/settings.json
@@ -5,15 +5,33 @@
 		"WRONG_SCOPE_COMMENT",
 		"EMPTY_LINE_FUNCTION"
 	],
+	"workbench.colorTheme": "vity",
+	"workbench.iconTheme": "material-icon-theme",
 	"files.autoSave": "onWindowChange",
+	"editor.formatOnSave": true,
+	"editor.fontFamily": "'Roboto Mono', 'Droid Sans Mono', Consolas",
 	"editor.insertSpaces": false,
 	"editor.detectIndentation": false,
 	"editor.renderFinalNewline": "off",
-	"explorer.confirmDragAndDrop": false,
-	"editor.fontFamily": "'Roboto Mono', 'Droid Sans Mono', Consolas",
 	"editor.autoClosingBrackets": "never",
 	"editor.autoClosingQuotes": "never",
+	"editor.inlineSuggest.enabled": true,
+	"editor.codeActionsOnSave": {
+		"source.organizeImports": true,
+		"source.fixAll.eslint": true
+	},
+	"explorer.confirmDragAndDrop": false,
 	"problems.showCurrentInStatus": true,
+	"workbench.startupEditor": "none",
+	"security.workspace.trust.untrustedFiles": "open",
+	"git.openRepositoryInParentFolders": "never",
+	"github.copilot.enable": {
+		"*": true,
+		"yaml": false,
+		"plaintext": true,
+		"markdown": true
+	},
+	"terminal.integrated.inheritEnv": false,
 	"vim.statusBarColorControl": true,
 	"vim.statusBarColors.normal": "#0C0E14",
 	"vim.statusBarColors.insert": "#731bb360",
@@ -27,15 +45,15 @@
 		"editor.selectionBackground": "#ffe3e94d",
 		"editorBracketMatch.background": "#ffe3e94d",
 		"editorBracketMatch.border": "#ffffff00",
-		"statusBar.noFolderBackground": "#0C0E14",
-		"statusBar.debuggingBackground": "#0C0E14",
+		"statusBar.noFolderBackground": "#007acc",
+		"statusBar.debuggingBackground": "#007acc",
 		"editorBracketHighlight.foreground1": "#f0f6fcc1",
 		"editorBracketHighlight.foreground2": "#ffff2690",
 		"editorBracketHighlight.foreground3": "#26ff9690",
 		"editorBracketHighlight.foreground4": "#b43bff90",
 		"editorBracketHighlight.foreground5": "#ff00f790",
 		"editorBracketHighlight.foreground6": "#ff009d90",
-		"statusBar.background": "#0C0E14",
+		"statusBar.background": "#007acc",
 		"editorInlayHint.background": "#0000",
 		"editorInlayHint.foreground": "#ffffff64"
 	},
@@ -47,20 +65,17 @@
 			}
 		}
 	},
-	"security.workspace.trust.untrustedFiles": "open",
-	"workbench.iconTheme": "material-icon-theme",
-	"editor.formatOnSave": true,
-	"[typescript]": {
-		"editor.defaultFormatter": "vscode.typescript-language-features"
-	},
-	"typescript.format.placeOpenBraceOnNewLineForControlBlocks": true,
-	"typescript.format.placeOpenBraceOnNewLineForFunctions": true,
 	"[c]": {
 		"editor.formatOnSave": false
 	},
 	"[cpp]": {
 		"editor.formatOnSave": false
 	},
+	"[typescript]": {
+		"editor.defaultFormatter": "vscode.typescript-language-features"
+	},
+	"typescript.format.placeOpenBraceOnNewLineForControlBlocks": true,
+	"typescript.format.placeOpenBraceOnNewLineForFunctions": true,
 	"[typescriptreact]": {
 		"editor.defaultFormatter": "vscode.typescript-language-features"
 	},
@@ -69,6 +84,12 @@
 	},
 	"[javascriptreact]": {
 		"editor.formatOnSave": false
+	},
+	"[vue]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[json]": {
+		"editor.defaultFormatter": "vscode.json-language-features"
 	},
 	"[scss]": {
 		"editor.formatOnSave": false
@@ -89,26 +110,11 @@
 		"./sources"
 	],
 	"python.formatting.provider": "yapf",
-	"editor.inlineSuggest.enabled": true,
-	"editor.codeActionsOnSave": {
-		"source.organizeImports": true,
-		"source.fixAll.eslint": true
-	},
-	"github.copilot.enable": {
-		"*": true,
-		"yaml": false,
-		"plaintext": true,
-		"markdown": true
-	},
 	"[markdown]": {
 		"editor.defaultFormatter": "yzhang.markdown-all-in-one"
 	},
-	"terminal.integrated.inheritEnv": false,
 	"[rust]": {
 		"editor.defaultFormatter": "rust-lang.rust-analyzer",
 		"editor.semanticHighlighting.enabled": false
-	},
-	"git.openRepositoryInParentFolders": "never",
-	"workbench.colorTheme": "vity",
-	"workbench.startupEditor": "none"
+	}
 }
